sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:16: error: value !=- is not a member of Int
		if (k!=-1) {setValeur(k,v)}
                     ^